[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "naver-blog-agent"
version = "0.1.0"
description = "Naver Blog Analysis Agent System"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.12.0",
    "anthropic>=0.18.0",
]

[project.scripts]
nbas = "src.cli:main"
